--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
 .flightbody {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(25, 25, 189, 0.8), rgba(83, 83, 128, 0.8)), url(images/bg.jpg);
+    background: linear-gradient(rgba(25, 25, 189, 0.8), rgba(83, 83, 128, 0.8)), url(bg.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -144,7 +144,7 @@ input::placeholder {
 .body {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(149, 149, 173, 0.8), rgba(43, 43, 212, 0.8)), url(images/background2.jpg);
+    background: linear-gradient(rgba(149, 149, 173, 0.8), rgba(43, 43, 212, 0.8)), url(background2.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -263,7 +263,7 @@ form p a {
 }
 
 .contactbody {
-    background: linear-gradient(rgba(148, 148, 212, 0.8), rgba(34, 34, 185, 0.8)), url(images/plane.jpg);
+    background: linear-gradient(rgba(148, 148, 212, 0.8), rgba(34, 34, 185, 0.8)), url(plane.jpg);
 }
 
 body,
@@ -490,7 +490,7 @@ a {
 .Aboutbody {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(161, 161, 196, 0.8), rgba(25, 25, 159, 0.8)), url(images/aboutbg.png);
+    background: linear-gradient(rgba(161, 161, 196, 0.8), rgba(25, 25, 159, 0.8)), url(aboutbg.png);
     background-position: center;
     background-size: cover;
     position: relative;
